<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/major_custom"
    android:fillViewport="true"
    android:fitsSystemWindows="true">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/universal_margin"
            android:src="@drawable/login"
            />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/universal_margin"
            android:textColorHint="@color/splash_color"
            >


            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginUname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login"
                android:layout_marginRight="@dimen/login"
                android:hint="@string/login_user_et"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/splash_color"
                android:textColorHint="@color/splash_color"
                android:textSize="@dimen/universal_margin"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login"
            android:textColorHint="@color/splash_color">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login"
                android:layout_marginRight="@dimen/login"
                android:hint="@string/login_user_pass"
                android:inputType="textPassword"
                android:textColor="@color/splash_color"
                android:textColorHint="@color/splash_color"
                android:textSize="@dimen/universal_margin" />
        </android.support.design.widget.TextInputLayout>

        <com.rey.material.widget.Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/universal_margin4"
            android:layout_marginLeft="@dimen/login"
            android:layout_marginRight="@dimen/login"
            android:layout_marginTop="@dimen/login"
            android:background="@color/minor_custom"
            android:gravity="center"
            android:padding="@dimen/universal_padding"
            android:text="@string/log_btn"
            android:textColor="@color/splash_color"
            android:textColorHint="@color/splash_color"
            app:rd_enable="true" />


        <CheckBox
            style="@style/Material.Drawable.CircularProgress"
            android:id="@+id/loginCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxpassword"
            android:gravity="center_vertical"
            android:padding="@dimen/universal_padding"
            android:textColor="@color/splash_color"
            android:layout_gravity="start"
            android:theme="@style/AppTheme"
            android:layout_marginLeft="@dimen/login"

            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/universal_padding">

            <com.rey.material.widget.TextView
                android:id="@+id/loginRegLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@color/splash_color"
                android:textSize="@dimen/universal_margin" />

            <com.rey.material.widget.TextView
                android:id="@+id/loginForgetLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forget"
                android:textAlignment="center"
                android:textColor="@color/splash_color"
                android:textSize="@dimen/universal_margin" />



        </LinearLayout>
    </LinearLayout>
</ScrollView>