<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/major_custom">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/account_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/minor_custom"
            >


            <com.rey.material.widget.ImageView
                android:id="@+id/accountBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bck"
                android:paddingLeft="@dimen/bck_padd"

                />
            <com.rey.material.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/universal_margin4"
                android:textColor="@color/splash_color"
                android:text="@string/account"
                android:gravity="center"
                android:padding="@dimen/login"
                android:textSize="@dimen/universal_margin1"/>
        </android.support.v7.widget.Toolbar>



        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/horizontal_linear_account"
            android:padding="@dimen/login"
            >
            <TextView
                android:id="@+id/left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/accountdetails"
                android:textStyle="bold"
                android:textSize="@dimen/universal_margin"
                android:textColor="@color/splash_color"
                />
            <TextView
                android:id="@+id/edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/left_text"
                android:gravity="right"
                android:text="@string/ED"
                android:textStyle="bold"
                android:textColor="@color/splash_color"
                android:textSize="@dimen/universal_margin"
                />
        </RelativeLayout>

        <!--  userName Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_padding"
            android:textColorHint="@color/splash_color"
            android:padding="@dimen/login_partial">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/accountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/UN"
                android:textColor="@color/splash_color"
                android:textColorHint="@color/splash_color"
                android:layout_marginTop="@dimen/login"
                android:layout_marginLeft="@dimen/login"
                android:layout_marginRight="@dimen/login"
                android:textSize="@dimen/universal_margin"
                android:text="supriya"
                app:et_labelTextColor="@color/splash_color"
                app:et_dividerColor="@color/splash_color"
                app:et_labelEnable="true"
                app:et_supportTextColor="@color/major_custom" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/splash_color"
            android:id="@+id/account_email"
            android:padding="@dimen/login_partial">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/accountEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/splash_color"
                android:textColorHint="@color/splash_color"
                android:hint="@string/EM"
                android:text="supriyapandey91@gmail.com"
                android:layout_marginLeft="@dimen/login"
                android:textSize="@dimen/universal_margin"
                android:layout_marginRight="@dimen/login"/>
        </android.support.design.widget.TextInputLayout>


        <!--  mobile Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_partial"
            android:textColorHint="@color/splash_color"
            android:id="@+id/account_mobile">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/accountMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/splash_color"
                android:textColorHint="@color/splash_color"
                android:layout_marginLeft="@dimen/login"
                android:layout_marginRight="@dimen/login"
                android:textSize="@dimen/universal_margin"
                android:text="9971018373"
                android:hint="@string/MO"/>
        </android.support.design.widget.TextInputLayout>


        <com.rey.material.widget.Button
            android:id="@+id/accountButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/universal_margin4"
            android:textColorHint="@color/splash_color"
            android:layout_marginLeft="@dimen/login"
            android:layout_marginRight="@dimen/login"
            android:background="@color/minor_custom"
            android:textColor="@color/splash_color"
            android:text="@string/savesettings"
            android:enabled="true"
            android:gravity="center"
            android:padding="@dimen/universal_padding"
            android:layout_marginTop="@dimen/login"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:rd_enable="true"


            />


</LinearLayout>


</ScrollView>
