<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_linearTwo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/splash_color"
    android:weightSum="100">



    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">

        <com.rey.material.widget.ImageView
            android:id="@+id/welcome2_Image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/welcome2"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rel_locateTwo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:padding="@dimen/universal_margin4">
     <com.rey.material.widget.TextView
            android:id="@+id/locate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locate_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/universal_margin2"
            android:layout_centerInParent="true"
            />
  <com.rey.material.widget.TextView
            android:id="@+id/locatedescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locate_descrition"
            android:layout_below="@+id/locate"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/universal_margin"

            />


        <com.rey.material.widget.Button
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/locateBtn"
            app:rd_enable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locatedescription"
            android:text="@string/locate_btntext"
            android:textColor="@color/splash_color"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/universal_margin2"


            />
    </RelativeLayout>


</LinearLayout>